<resources>
    <string name="app_name">Kiwi Cookies and Cakes</string>
    <string name="itemName">Item Name</string>
    <string name="itemQuantity">Item Quantity</string>
    <string name="itemType">Item Type</string>
    <string name="submit">Submit</string>
    <string name="inventoryMenu">Inventory Menu</string>
    <string name="addItem">Add Item</string>
    <string name="inventoryStatus">Inventory Status</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="adminusername">admin</string>
    <string name="adminpassword">CookieManagement84</string>
    <string name="clearItems">Clear Items</string>
    <string name="testItems">Add Test Items</string>
    <string name="manageInventory">Manage Inventory</string>
    <string name="addUser">Add User</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="employeeNumber">Employee Number</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="manageUsers">Manage Users</string>
    <string name="viewUsers">View Users</string>
    <string name="removeUser">Remove User</string>
    <string name="manageUsersMenu">Users Menu</string>
    <string name="reset">Reset</string>
    <string name="findUser">Find User</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="noItems">Error! There are no items in the inventory</string>
    <string name="logout">Log out</string>
    <string name="biscuit">Biscuit</string>
    <string name="cookie">Cookie</string>
    <string name="cake">Cake</string>
    <string name="ingredient">Ingredient</string>
    <string name="other">Other</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="userNotFound">User not found</string>
    <string name="userRemoved">User removed</string>
    <string name="confirmRemoval">Confirm removal of user</string>
    <string name="userDatabase">userDatabase</string>
    <string name="itemDatabase">itemDatabase</string>
    <string name="clearDatabaseConfirmation">Do you want to add clear all items from the database</string>
    <string name="confirmationRequired">Confirmation required</string>
    <string name="addTestItemsConfirmation">Do you want to add test items?</string>
    <string name="passwordIncorrect">Password incorrect</string>
    <string name="userAlreadyExists">A user already exists with this username</string>
    <string name="userAdded">User added successfully</string>
    <string name="invalidInputs">Invalid inputs, please try again</string>
    <string name="itemAdded">Item added successfully</string>

    <string-array name="itemTypeArray">
        <item>Biscuit</item>
        <item>Cookie</item>
        <item>Cake</item>
        <item>Ingredient</item>
        <item>Other</item>
    </string-array>



</resources>