<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageInventoryActivity">

    <Button
        android:id="@+id/buttonManageInventory_add"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/addItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageInventory_status" />

    <Button
        android:id="@+id/buttonManageInventory_clear"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/clearItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageInventory_add" />

    <Button
        android:id="@+id/buttonManageInventory_test"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/testItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonManageInventory_clear" />

    <Button
        android:id="@+id/buttonManageInventory_status"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/inventoryStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewManageInventory_title" />

    <TextView
        android:id="@+id/textViewManageInventory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/manageInventory" />
</androidx.constraintlayout.widget.ConstraintLayout>