<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoveUserActivity">

    <TextView
        android:id="@+id/textViewRemoveUser_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/removeUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/editTextRemoveUser_username"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRemoveUser_title" />

    <Button
        android:id="@+id/buttonRemoveUser_find"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/findUser"
        app:backgroundTint="@color/usersMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRemoveUser_username" />

    <Button
        android:id="@+id/buttonRemoveUser_menu"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/manageUsersMenu"
        app:backgroundTint="@color/usersMenu"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemoveUser_find" />

    <Button
        android:id="@+id/buttonRemoveUser_logout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/logout"
        app:backgroundTint="@color/secondaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/buttonRemoveUser_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>