<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextAddUser_Password"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddUser_username" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/addUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextAddUser_employeeNumber"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/employeeNumber"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddUser_dateOfBirth" />

            <EditText
                android:id="@+id/editTextAddUser_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/phoneNumber"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddUser_employeeNumber" />

            <EditText
                android:id="@+id/editTextAddUser_dateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/dateOfBirth"
                android:windowSoftInputMode="stateHidden|adjustResize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddUser_Password" />

            <EditText
                android:id="@+id/editTextAddUser_username"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/addUser"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editTextAddUser_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:lines="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddUser_phoneNumber" />

            <Button
                android:id="@+id/buttonAddUser_submit"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddUser_address" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>