<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageUsersActivity">

    <TextView
        android:id="@+id/textViewManageUsers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/manageUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewManageUsers_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonManageUsers_viewUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/viewUsers"
                    app:backgroundTint="@color/usersMenu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonManageUsers_AddUser" />

                <Button
                    android:id="@+id/buttonManageUsers_Inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/manageInventory"
                    app:backgroundTint="@color/inventoryMenu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonManageUsers_removeUser" />

                <Button
                    android:id="@+id/buttonManageUsers_removeUser"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/removeUser"
                    app:backgroundTint="@color/usersMenu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonManageUsers_viewUsers" />

                <Button
                    android:id="@+id/buttonManageUsers_AddUser"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/addUser"
                    app:backgroundTint="@color/usersMenu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonManageUsers_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/logout"
                    app:backgroundTint="@color/secondaryButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonManageUsers_Inventory" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>